global circle컨트롤러 분할 및 확장