@@ -1,16 +1,15 @@
 package com.soldesk.moa.board.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.soldesk.moa.board.dto.BoardDTO;
-import com.soldesk.moa.board.dto.PostDTO;
+import com.soldesk.moa.board.dto.BoardRequestDTO;
+import com.soldesk.moa.board.dto.BoardResponseDTO;
 import com.soldesk.moa.board.entity.Board;
 import com.soldesk.moa.board.entity.Post;
+import com.soldesk.moa.board.entity.constant.BoardType;
 import com.soldesk.moa.board.repository.BoardRepository;
 import com.soldesk.moa.board.repository.PostRepository;
 import com.soldesk.moa.circle.entity.Circle;
@@ -26,32 +25,43 @@ import lombok.extern.log4j.Log4j2;
 public class BoardService {
 
     private final BoardRepository boardRepository;
-    private final CircleRepository circleRepository;
+    private final CircleRepository circleRepository; // Circle board 생성 시 필요
 
-    // 보드 리스트 출력
-    public List<BoardDTO> BoardList() {
-
-        List<Board> boards = boardRepository.findAll();
-
-        return boards.stream()
-                .map(board -> BoardDTO.builder()
-                        .boardId(board.getBoardId())
-                        .boardRole(board.getBoardRole())
-                        .name(board.getName())
-                        .circleId(board.getCircleId() != null ? board.getCircleId().getCircleId() : null)
-                        .build())
-                .collect(Collectors.toList());
+    public List<BoardResponseDTO> listGlobalBoards() {
+        return List.of(BoardType.NOTICE, BoardType.FREE, BoardType.SUPPORT).stream()
+                .map(this::getGlobalBoardOrThrow)
+                .map(this::toBoardResponse)
+                .toList();
     }
 
-    // 보드 생성
-    public Long create(BoardDTO dto) {
-        Circle circle = null;
-        if (dto.getCircleId() != null)
-            circle = circleRepository.findById(dto.getCircleId())
-                    .orElseThrow(() -> new IllegalArgumentException("Circle not found: " + dto.getCircleId()));
+    public BoardResponseDTO readGlobalBoard(BoardType type) {
+        Board b = getGlobalBoardOrThrow(type);
+        return toBoardResponse(b);
+    }
 
-        Board board = Board.builder()
-                .boardRole(dto.getBoardRole())
+    public List<BoardResponseDTO> listCircleBoards(Long circleId) {
+        // 이건 BoardRepository에 메서드 하나 추가하면 깔끔함:
+        // List<Board> findByBoardTypeAndCircleId_CircleId(BoardType type, Long
+        // circleId);
+        // 일단 최소로는 custom query 권장.
+        throw new UnsupportedOperationException("add repository method: find circle boards");
+    }
+
+    @Transactional
+    public Long createCircleBoard(BoardRequestDTO dto) {
+        if (dto.getBoardType() != BoardType.CIRCLE) {
+            throw new IllegalArgumentException("only CIRCLE board can be created here");
+        }
+        if (dto.getCircleId() == null) {
+            throw new IllegalArgumentException("circleId is required for CIRCLE board");
+        }
+
+        Circle circle = circleRepository.findById(dto.getCircleId())
+                .orElseThrow(() -> new NotFoundException("circle not found"));
+
+        Board board = Board
+                .builder()
+                .boardType(BoardType.CIRCLE)
                 .name(dto.getName())
                 .circleId(circle)
                 .build();
@@ -59,20 +69,32 @@ public class BoardService {
         return boardRepository.save(board).getBoardId();
     }
 
-    // 보드 수정
-    public Long update(BoardDTO dto) {
-
-        Board board = boardRepository.findById(dto.getBoardId())
-                .orElseThrow(() -> new IllegalArgumentException("Board not found: " + dto.getBoardId()));
-
-        board.changeName(dto.getName());
-
+    @Transactional
+    public Long updateBoardName(Long boardId, String newName) {
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new NotFoundException("board not found"));
+        board.changeName(newName);
         return board.getBoardId();
     }
 
-    // 보드 삭제
-    public void delete(Long boardId) {
-        boardRepository.deleteById(boardId);
+    private Board getGlobalBoardOrThrow(BoardType type) {
+        if (type == BoardType.CIRCLE) {
+            throw new IllegalArgumentException("CIRCLE is not global");
+        }
+        return boardRepository.findByBoardTypeAndCircleIdIsNull(type)
+                .orElseThrow(() -> new NotFoundException("global board not found: " + type));
     }
 
+    private BoardResponseDTO toBoardResponse(Board b) {
+        BoardResponseDTO dto = BoardResponseDTO
+                .builder()
+                .boardId(b.getBoardId())
+                .boardType(b.getBoardType())
+                .name(b.getName())
+                .circleId(b.getCircleId() == null ? null : b.getCircleId().getCircleId()) // PK명 맞춰 수정
+                .createDate(b.getCreateDate())
+                .updateDate(b.getUpdateDate())
+                .build();
+        return dto;
+    }
 }
